2007-11-19  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/glpainter.cpp: Improvements to the drawTriangle
	function - generate valid normals for the triangles.

	* libavogadro/src/engines/CMakeLists.txt,
	libavogadro/src/engines/polygonengine.*: Added a new polygon engine.
	Render certain structures as polygons.

2007-11-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/glpainter.cpp: Refinement of multiple bonds in
	wireframe view.

2007-11-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/painter.h, libavogadro/src/glpainter.h,
	libavogadro/src/povpainter.h, libavogadro/src/glpainter.cpp: Add
	drawMultiLine method for wireframe multiple bonds.

	* libavogadro/src/engines/wireengine.h,
	libavogadro/src/engines/wireengine.cpp,
	libavogadro/src/engines/wiresettingswidget.ui:
	Add multiple bond indications for wireframe render engine.
	(Still needs some refinement, particularly triple bonds.)

2007-11-17  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/engines/labelsettingswidget.ui,
	libavogadro/src/engines/ribbonengine.cpp,
	libavogadro/src/engines/spheresettingswidget.ui,
	libavogadro/src/engines/ringsettingswidget.ui,
	libavogadro/src/engines/ribbonsettingswidget.ui: Added spacers to the
	engine configuration dialogs.

2007-11-16  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/color.*, libavogadro/src/glpainter.cpp: Added a new
	OpenGL material that should work better with the ring engine.

	* libavogadro/src/engines/bsdyengine.*,
	libavogadro/src/engines/bsdysettingswidget.ui: Added check box to show
	higher order bonds or not.

2007-11-13  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/engines/ribbonengine.*: Updated so that we now have
	multiple chain colours!

	* libavogadro/src/engines/ringengine.*,
	libavogadro/src/engines/CMakeLists.txt: Added new ring engine, renders
	ring structures. Transparency is not working yet.

	* libavogadro/src/engines/ringengine.*,