@@ -1,3 +1,10 @@
+2007-11-20  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* avogadro/src/extensions/selectextension.cpp: Renamed extension
+	for SMARTS selection. Added support for new options, such as
+	invert selection. (More to come later, e.g., atom selection by
+	name, residue by name, etc.)
+
 2007-11-19  Marcus D. Hanwell <marcus@cryos.org>
 
 	* libavogadro/src/glpainter.cpp: Improvements to the drawTriangle
